Redesign the system to real time chat room

--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,24 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-@layer components {
-  .commentTextArea {
-    @apply rounded-xl w-3/5 h-1/6 border-2 border-slate-500 mt-2 fixed bottom-0 z-50;
+@layer base {
+  body {
+    @apply bg-gray-900;
   }
 
-  .replyTextArea {
+  #root {
+    @apply min-h-screen overflow-hidden;
+  }
+}
+
+@layer components {
+  /* .commentTextArea {
+    @apply rounded-xl w-[270px] md:w-[500px] lg:w-[600px] xl:w-[800px] h-32 border-2 border-slate-500 fixed bottom-0 mt-2 z-[999];
+  } */
+
+  /* .replyTextArea {
     @apply rounded-xl w-3/5 h-1/6 border-2 border-slate-500 mt-2 fixed bottom-0 z-50;
     transform: translate(0, 100%);
     transition: transform 0.3s ease-in-out; 
-  }
+  } */
 }
